# HW30

djangoProject2/: db.sqlite3  manage.py  pyproject.toml
djangoProject2/ads/: admin.py  models.py  permissions.py  serializers.py  views.py
djangoProject2/ads/migrations/: 0001_initial.py
djangoProject2/ads/urls/: ad.py  cat.py  selection.py
djangoProject2/ads/views/: ad.py  cat.py  selection.py
djangoProject2/data/: csv_to_json.py  user.json
djangoProject2/djangohw/: asgi.py  settings.py  urls.py  wsgi.py
djangoProject2/users/: admin.py  models.py  serilizers.py  urls.py  views.py
djangoProject2/users/migrations/: 0001_initial.py  0002_alter_user_role.py
